--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
     "@google-cloud/storage": "^7.6.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^9.4.1",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
